Fixed alignment of buttons

--- a/Front-end Projects/02_Counter_program/style.css
+++ b/Front-end Projects/02_Counter_program/style.css
@@ -2,6 +2,6 @@ h1{
     text-align: center;
 }
 
-#decrease{
-    margin-left: 43.5%;
+#Button_container{
+    text-align: center;
 }
